syntax = "proto3";

package service;

option go_package = "./service";

message LoginRequest{
    string name = 1;
    string password = 2;
}

message LoginResponse{
    string res = 1;
}

service LoginService{
    rpc Login(LoginRequest) returns(LoginResponse);
}